# ComfyUI-Noctyra-Manager

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_standalone.bat
.github/workflows/: test.yml
browser-extension/: background.js  content-civitai.js  content.css  manifest.json  noctyra-send.js  popup.css  popup.html  popup.js  rules.json
manager/: __init__.py  __main__.py  base_models.py  civarchive.py  civitai.py  config.py  database.py  database_workflow.py  downloader.py  gallery_scanner.py  huggingface.py  image_meta.py  manager.py  manager_organize.py  preview_cache.py  process_lock.py  proxy_util.py  recipes.py  routes.py  routes_common.py  routes_downloads.py  routes_models.py  routes_ops.py  routes_previews.py  routes_workflows.py  routes_workflows_common.py  routes_workflows_fetch.py  routes_workflows_recipes.py  scanner.py  usage_tracker.py  websocket.py
manager/web/: index.html  statistics.html  workflows.html
manager/web/static/css/: cards.css  dialogs.css  download.css  misc.css  modal.css  settings.css  statistics.css  style.css  tokens.css  (+1 more)
scripts/: gen_extension_icons.py
tests/: conftest.py  test_base_models.py  test_civarchive.py  test_civitai.py  test_config.py  test_data_root.py  test_database.py  test_gallery_scanner.py  test_path_templates.py  test_preview_cache.py  test_process_lock.py  test_proxy_util.py  test_recipes.py  test_safetensors_header.py  test_scanner.py  test_security.py
web/js/: noctyra_canvas_picker.js  noctyra_canvas_receiver.js  noctyra_topbar_btn.js
(+40 files in other folders)
